Bug 742240 - Handle unsupported commands per spec in execCommand/queryCommand*; r=ehsan